# edk2-expression

./: .gitignore  Changelog.md  License  Readme.md  pyproject.toml
edk2_expression/: __init__.py  error.py  lex.py
edk2_expression/ast/: __init__.py  core.py  operand.py  operator.py
example/: dsc-parser.py
tests/: test_init.py  test_lex.py
tests/ast/: test_ast.py  test_core.py  test_operand.py  test_operator.py
