[tool.poetry]
name = "edk2-expression"
version = "0.2.1"
description = "EDK II metadata expression syntax parser"
authors = ["Tzu-Ting <tzingshih@gmail.com>"]
license = "MIT"
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.10"
Pygments = "^2.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
